@@ -3,8 +3,9 @@
     * STSourceReader.m (-lineNumberForIndex:, -readNextToken): Tidy
     source.
 
-    * STSourceReader.m (-readNextToken): Prevent out of range accesses for
-    the input string.
+    * STSourceReader.m (-readNextToken): Bug fixes:
+    - Prevent out of range accesses for the input string.
+    - Exponent of a real number must contain at least one digit.
 
 2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
